--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.sass
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.sass
@@ -5,10 +5,6 @@
   position: relative
   transition: width 0.3s ease-in-out
 
-.collapsed
-  width: 80px
-  width: var(--sidebar-width-collapsed)
-
 .switchers
   position: absolute
   bottom: 20px
@@ -18,3 +14,42 @@
 
 .lang
   margin-left: 20px
+
+.collapseBtn
+  position: absolute
+  right: -32px
+  bottom: 40px
+
+.items
+  margin-top: 20px
+  margin-left: 30px
+  display: flex
+  flex-direction: column
+
+.item
+  margin-top: 10px
+  display: flex
+  align-items: center
+
+.link
+  margin-left: 10px
+  opacity: 1
+
+.icon
+  fill: var(--inverted-primary-color)
+
+.collapsed
+  width: 80px
+  width: var(--sidebar-width-collapsed)
+
+  .switchers
+    flex-direction: column
+    align-items: center
+
+  .lang
+    margin-left: 0
+
+  .link
+    opacity: 0
+    transition: opacity 0.2s ease-in-out
+    width: 0
