--- a/src/app/styles/index.sass
+++ b/src/app/styles/index.sass
@@ -2,14 +2,15 @@
 @import 'variables/global'
 @import 'themes/light'
 @import 'themes/dark'
-  
-.app
+
+body
   font: var(--font-m)
 
-  background-color: var(--bg-color)
   color: var(--primary-color)
 
+.app
   min-height: 100vh
+  background-color: var(--bg-color)
 
 .content-page
   display: flex
