--- a/src/app/styles/themes/light.sass
+++ b/src/app/styles/themes/light.sass
@@ -1,7 +1,7 @@
 .app.light
   --bg-color: #e8e8ea
   --inverted-bg-color: #090949
-  --primary-color: #0232c2
-  --secondary-color: #0449e0
+  --primary-color: #0449e0
+  --secondary-color: #0232c2
   --inverted-primary-color: #04ff04
   --inverted-secondary-color: #049604
