--- a/src/shared/ui/Button/ui/Button.module.sass
+++ b/src/shared/ui/Button/ui/Button.module.sass
@@ -3,11 +3,15 @@
   color: var(--primary-color)
   padding: 6px 15px
 
-.clear
+.clear,
+.clearInverted
   padding: 0
   border: none
   background: none
   outline: none
+
+.clearInverted
+  color: var(--inverted-primary-color)
 
 .outline
   border: 1px solid var(--primary-color)
