--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.sass
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.sass
@@ -2,14 +2,19 @@
   padding: 20px
   border: 2px solid var(--inverted-bg-color)
 
-.header
-  display: flex
-
-.editBtn
-  margin-left: auto
-
-.data
-  margin-top: 30px
-
 .input
   margin-top: 10px
+
+.loading,
+.error
+  display: flex
+  align-items: center
+  justify-content: center
+  height: 300px
+
+.avatarWrapper
+  display: flex
+  justify-content: center
+
+.editing
+  border: 2px solid var(--inverted-primary-color)
