--- a/src/shared/ui/Button/ui/Button.module.sass
+++ b/src/shared/ui/Button/ui/Button.module.sass
@@ -18,6 +18,11 @@
   color: var(--primary-color)
   background: none
 
+.outlineRed
+  border: 1px solid var(--red-light)
+  color: var(--red-light)
+  background: none
+
 .background
   background-color: var(--bg-color)
   color: var(--primary-color)
