--- a/src/shared/ui/Text/ui/Text.module.sass
+++ b/src/shared/ui/Text/ui/Text.module.sass
@@ -13,3 +13,12 @@
     color: var(--red-light)
   .text
     color: var(--red-dark)
+
+.left
+  text-align: left
+
+.center
+  text-align: center
+
+.right
+  text-align: right
