add component template, redirect with no auth, add react hot loader

--- a/src/app/styles/index.sass
+++ b/src/app/styles/index.sass
@@ -2,10 +2,10 @@
 @import 'variables/global'
 @import 'themes/light'
 @import 'themes/dark'
+@import 'themes/orange'
 
 body
   font: var(--font-m)
-
   color: var(--primary-color)
 
 .app
