add code, skeleton, details page and blocks

--- a/src/shared/ui/Text/ui/Text.module.sass
+++ b/src/shared/ui/Text/ui/Text.module.sass
@@ -1,11 +1,9 @@
 .textWrapper
 
 .title
-  font: var(--font-l)
   color: var(--primary-color)
 
 .text
-  font: var(--font-m)
   color: var(--secondary-color)
 
 .error
@@ -22,3 +20,16 @@
 
 .right
   text-align: right
+
+.size_m
+  .title
+    font: var(--font-l)
+  .text
+    font: var(--font-m)
+
+.size_l
+  .title
+    font: var(--font-xl)
+  .text
+    font: var(--font-l)
+
