--- a/src/app/styles/index.sass
+++ b/src/app/styles/index.sass
@@ -17,4 +17,7 @@ body
 
 .page-wrapper
   flex-grow: 1
-  padding: 20px
+  padding: 20px 20px 20px 45px
+  height: calc(100vh - 50px)
+  overflow-y: auto
+  width: 100%
