--- a/src/app/styles/themes/dark.sass
+++ b/src/app/styles/themes/dark.sass
@@ -5,3 +5,6 @@
   --secondary-color: #049604
   --inverted-primary-color: #0452ff
   --inverted-secondary-color: #0232c2
+  --skeleton-color: #1515ad
+  --skeleton-shadow: #2b2be8
+  --code-bg-color: #1212a1
