--- a/src/app/styles/themes/light.sass
+++ b/src/app/styles/themes/light.sass
@@ -5,3 +5,6 @@
   --secondary-color: #0232c2
   --inverted-primary-color: #04ff04
   --inverted-secondary-color: #049604
+  --skeleton-color: #fff
+  --skeleton-shadow: rgba(0 0 0 / 20%)  
+  --code-bg-color: #fff
