--- a/src/app/styles/themes/orange.sass
+++ b/src/app/styles/themes/orange.sass
@@ -5,3 +5,6 @@
   --secondary-color: #d01f0e
   --inverted-primary-color: #dbd5dc
   --inverted-secondary-color: #faf4fb
+  --skeleton-color: #ffddcc
+  --skeleton-shadow: rgb(0 0 0 / 20%)
+  --code-bg-color: #fff
