--- a/src/shared/ui/AppLink/ui/AppLink.module.sass
+++ b/src/shared/ui/AppLink/ui/AppLink.module.sass
@@ -1,6 +1,10 @@
 .appLink
   color: var(--primary-color)
 
+  &:hover
+    opacity: 0.8
+    fill-opacity: 0.8
+
 .primary
   color: var(--primary-color)
 
