--- a/src/shared/ui/Button/ui/Button.module.sass
+++ b/src/shared/ui/Button/ui/Button.module.sass
@@ -3,6 +3,10 @@
   color: var(--primary-color)
   padding: 6px 15px
 
+  &:hover
+    opacity: 0.8
+    fill-opacity: 0.8
+
 .clear,
 .clearInverted
   padding: 0
