--- a/src/app/styles/themes/light.sass
+++ b/src/app/styles/themes/light.sass
@@ -6,5 +6,6 @@
   --inverted-primary-color: #04ff04
   --inverted-secondary-color: #049604
   --skeleton-color: #fff
-  --skeleton-shadow: rgba(0 0 0 / 20%)  
+  --skeleton-shadow: rgba(0 0 0 / 20%)
   --code-bg-color: #fff
+  --card-bg-color: #d5d5d7
