add article recommendations, Page, Back to scroll

--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage.module.sass
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage.module.sass
@@ -2,3 +2,9 @@
 
 .commentTitle
   margin-top: 20px
+
+.recommendations
+  margin-top: 20px
+  flex-wrap: nowrap
+  overflow-y: hidden
+  overflow-x: auto
