--- a/src/shared/ui/Card/ui/Card.module.sass
+++ b/src/shared/ui/Card/ui/Card.module.sass
@@ -1,4 +1,9 @@
 .card
   padding: 15px
   border-radius: 12px
+
+.normal
   background-color: var(--card-bg-color)
+
+.outlined
+  border: 1px solid var(--primary-color)
