add create and edit pages

--- a/src/shared/ui/Text/ui/Text.module.sass
+++ b/src/shared/ui/Text/ui/Text.module.sass
@@ -12,6 +12,12 @@
   .text
     color: var(--red-dark)
 
+.inverted
+  .title
+    color: var(--inverted-primary-color)
+  .text
+    color: var(--inverted-secondary-color)
+
 .left
   text-align: left
 
