--- a/src/entities/Article/ui/ArticleList/ArticleList.module.sass
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.sass
@@ -8,3 +8,11 @@
   display: flex
   flex-wrap: wrap
   gap: 30px
+
+  .card
+    display: inline-flex
+    height: 300px
+
+  .row
+    display: flex
+    gap: 30px
