--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.sass
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.sass
@@ -23,8 +23,8 @@
 .items
   margin-top: 20px
   margin-left: 30px
-  display: flex
-  flex-direction: column
+  // display: flex
+  // flex-direction: column
 
 .collapsed
   width: 80px
