add Listbox with headlessui

--- a/src/shared/ui/Text/ui/Text.module.sass
+++ b/src/shared/ui/Text/ui/Text.module.sass
@@ -27,6 +27,12 @@
 .right
   text-align: right
 
+.size_s
+  .title
+    font: var(--font-m)
+  .text
+    font: var(--font-s)
+
 .size_m
   .title
     font: var(--font-l)
@@ -38,4 +44,3 @@
     font: var(--font-xl)
   .text
     font: var(--font-l)
-
