add rtk query api, refactoring

--- a/src/shared/ui/Code/ui/Code.module.sass
+++ b/src/shared/ui/Code/ui/Code.module.sass
@@ -1,7 +1,7 @@
 .code
   position: relative
   border: 1px solid var(--primary-color)
-  padding: 20px
+  padding: 20px 80px 20px 20px
   background-color: var(--code-bg-color)
   color: var(--primary-color)
   overflow: auto
